<resources>
    <string name="app_name">P4Pathfinder</string>
    <string name="sign_in_text">Sign in</string>
    <string name="image_of_a_fingerprint_text">Image of a fingerprint</string>
    <string name="enter_username_text">Enter username</string>
    <string name="enter_password_text">Enter password</string>
    <string name="register_text">Register</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_section1">Session</string>
    <string name="title_section2">History</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="start_session_text">Start Session</string>

    <string name="session_information_text">Session information</string>
    <string name="image_compass_content_description">Image of a compass.</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="end_concert">End Concert</string>
    <string name="highest_db">Highest dB</string>
    <string name="medium_db">Medium dB</string>
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="location">Location</string>
    <string name="session_text">Session</string>
    <string name="history_text">History</string>
    <string name="account_text">Account</string>
    <string name="would_you_like_to_text">Would you like to:</string>
    <string name="start_a_new_session_text">Start a new session</string>
    <string name="view_previous_sessions_text">View previous sessions</string>
    <string name="edit_your_account_text">Edit your account</string>
    <string name="re_enter_password_text">Re-enter password</string>
    <string name="fingerprint_login_feature_text">Fingerprint login feature</string>
    <string name="save_text">Save</string>
    <string name="stop_session_text">Stop session</string>
    <string name="warning_text">Warning!</string>
    <string name="clear_history_text">Clear history</string>
    <string name="select_from_date_text">Select from date</string>
    <string name="select_to_date_text">select to date</string>
    <string name="close_text">Close</string>

</resources>
