<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_suggestions_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/welcome_suggestions_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/would_you_like_to_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/welcome_new_session_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_a_new_session_text" />

        <Button
            android:id="@+id/welcome_session_history_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_previous_sessions_text" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>